--- a/src/components/UI/Card.css
+++ b/src/components/UI/Card.css
@@ -22,7 +22,7 @@
       
       .poster {
         width: auto;
-        height: 27rem;
+        height: auto;
         box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
       }
       
