--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   --main-color: #535bf2;
   --supporting-color: #ebf3fe;
   --glow-color: hsl(186, 91%, 4%);
+
 }
 html {
   font-size: 62.5%;
@@ -31,6 +32,7 @@ body {
   padding: 0 32px;
   min-width: 320px;
   background-color: var(--backgroundColor);
+  max-width: 1024px;
 }
 h1,
 h2,
@@ -81,7 +83,7 @@ a:hover {
 
 /*! layout */
 .container {
-  max-width: 142rem;
+  max-width: 102.4rem;
   margin: 0 auto;
   padding: 9.6rem 2.4rem;
 }
